Minor fixes for week 6

--- a/week6/src/main/resources/templates/add-dish.html
+++ b/week6/src/main/resources/templates/add-dish.html
@@ -36,7 +36,7 @@
             </form>
             
         </div>
-        <footer th:include= "@{/fragments/footer.html}"></footer>
+        <footer th:include= "~{@{/fragments/footer.html}}"></footer>
     </div>        
 </body>
 </html>
