--- a/week6/src/main/resources/templates/home.html
+++ b/week6/src/main/resources/templates/home.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
             </div>
-            <footer th:include= "@{/fragments/footer.html}"></footer>
+            <footer th:include= "~{@{/fragments/footer.html}}"></footer>
         </div>        
     </body>
 </html>
