--- a/assignment3/src/main/resources/templates/authentication/login.html
+++ b/assignment3/src/main/resources/templates/authentication/login.html
@@ -9,31 +9,55 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" th:href="@{/css/style.css}">
     </head>
-    <body>
+    <body class="d-flex flex-column m-5">
+        
         <h1>Login to Continue</h1>
 
-        <!-- Messages -->
+        <!-- Messages based on params -->
         <div th:if="${param.error}">
-            Invalid username and/or password. Please try again.
+            <b>Invalid username and/or password. Please try again.</b>
         </div>
         <div th:if="${param.logout}">
-            You've been logged out.
+            <b>You've been logged out.</b>
         </div>
+        <br/>
 
         <!-- Other alerts -->
         <div class="alert alert-primary" role="alert" th:if="${msg}" th:text="${msg}"></div>
 
         <!-- Login form -->
-        <form th:action="@{/login}" method="post">
-            <input type="text" name="username" placeholder="Enter username..."/>
-            <input type="password" name="password" placeholder="Enter password..."/>
-            <button type="submit">Log In</button>
+        <form class="d-flex flex-column" th:action="@{/login}" method="post">
+
+            <div>
+                <label class="form-label" for="username">Username </label>
+                <input class="form-control" type="text" name="username" placeholder="Enter username..."/>
+            </div>
+            
+            <div>
+                <label class="form-label" for="password">Password </label>
+                <input class="form-control" type="password" name="password" placeholder="Enter password..."/>
+            </div>
+
+            <br/>
+            <button class="btn btn-primary" type="submit">Log In</button>
         </form>
 
-        <!-- Registration card -->
-        <div class="card card-body m-2 w-25">
-            <h4 class="card-title">Need an account?</h4>
-            <a href="/register" type="button" class="btn btn-primary">Register Here</a>
+        <hr/>
+
+
+        <!-- Cards -->
+        <div class="d-flex flex-row">        
+            <!-- Registration card -->
+            <div class="card card-body m-2 w-50">
+                <h4 class="card-title">Need an account?</h4>
+                <a href="/register" type="button" class="btn btn-primary">Register Here</a>
+            </div>
+
+            <!-- Filler card -->
+            <div class="card card-body m-2 w-50">
+                <h4 class="card-title">Another Card</h4>
+                <p class="card-text">Because just one doesn't look right</p>
+            </div>
         </div>
     </body>
 </html>
