--- a/assignment3/src/main/resources/templates/authentication/register.html
+++ b/assignment3/src/main/resources/templates/authentication/register.html
@@ -5,28 +5,38 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Register</title>
 
+        <!-- Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" th:href="@{/css/style.css}">
     </head>
-    <body>
+    <body class="d-flex flex-column m-5">
+
         <h1>Register a New Account</h1>
 
         <!-- Alerts - unsure if this needs to be here -->
         <div class="alert alert-primary" role="alert" th:if="${msg}" th:text="${msg}"></div>
 
         <!-- Registration form -->
-        <form th:action="@{/register}" th:object="${user}" method="post">
-            <label for="username">Username</label>
-            <input type="text" name="username" placeholder="Enter username..." th:field="*{username}"/>
-            <label for="password">Password</label>
-            <input type="password" name="password" placeholder="Enter password..." th:field="*{password}"/>
+        <form class="d-flex flex-column" th:action="@{/register}" th:object="${user}" method="post">
+
+            <!-- Username field -->
+            <div>
+                <label class="form-label" for="username">Username</label>
+                <input class="form-control" type="text" name="username" placeholder="Enter username..." th:field="*{username}"/>
+            </div>
+
+            <!-- Password field -->
+            <div>
+                <label class="form-label" for="password">Password</label>
+                <input class="form-control" type="password" name="password" placeholder="Enter password..." th:field="*{password}"/>
+            </div>  
             
             <!-- Role selection - not for prod! -->
             <div class="mb-3">
                 <label for="" class="form-label">Role</label>
                 <select
-                    class="form-select form-select-lg"
+                    class="form-select form-select-m"
                     name="role"
                     id="role"
                     th:field="*{role}"
@@ -38,9 +48,8 @@
             </div>
 
             <!-- Submit button -->
-            <button type="submit">Register</button>
+            <button class="btn btn-primary" type="submit">Register</button>
+            <hr/>
         </form>
-
-
     </body>
 </html>
