--- a/assignment3/src/main/resources/templates/item-form.html
+++ b/assignment3/src/main/resources/templates/item-form.html
@@ -10,27 +10,27 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" th:href="@{/css/style.css}">
     </head>
-    <body>
+    <body class="m-5">
         
         <!-- Form for adding items -->
-        <form th:object="${item}" method="post" th:action="@{/admin/post-item}">
+        <form class="d-flex flex-column" th:object="${item}" method="post" th:action="@{/admin/post-item}">
             <h3>Item Form</h3>
             <input type="hidden" th:field="*{id}">
             <div class="form-group">
-                <label for="name">Name</label>
-                <input th:field="*{name}" type="text" class="form-control" id="name">
+                <label class="form-label" for="name">Name</label>
+                <input class="form-control" th:field="*{name}" type="text" id="name">
             </div>
             <div class="form-group">
-                <label for="name">Brand</label>
-                <input th:field="*{brand}" type="text" class="form-control" id="brand">
+                <label class="form-label" for="name">Brand</label>
+                <input class="form-control" th:field="*{brand}" type="text" id="brand">
             </div>
             <div class="form-group">
-                <label for="name">Year</label>
-                <input th:field="*{year}" type="number" class="form-control" id="year">
+                <label class="form-label" for="name">Year</label>
+                <input class="form-control" th:field="*{year}" type="number" id="year">
             </div>
             <div class="form-group">
-                <label for="name">Price</label>
-                <input th:field="*{price}" type="number" class="form-control" id="price">
+                <label class="form-label" for="name">Price</label>
+                <input class="form-control" th:field="*{price}" type="number"  id="price">
             </div>
             <br/>
             <button type="submit" class="btn btn-primary">Add Item</button>
